<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.ProfileFragment"
    tools:paddingHorizontal="@dimen/screen_padding_horizontal"
    tools:paddingVertical="@dimen/screen_padding_vertical">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="Back"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/user_icon"
        android:layout_width="@dimen/image_size_medium"
        android:layout_height="@dimen/image_size_medium"
        android:contentDescription="@string/user_profile_picture"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toEndOf="@id/back_button"
        app:layout_constraintTop_toTopOf="@id/back_button"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Musify.ImageCircular"
        tools:srcCompat="@drawable/ic_person" />

    <TextView
        android:id="@+id/username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/item_margin_medium"
        android:text="@string/user"
        android:textAppearance="@style/TextAppearance.Musify.Large"
        app:layout_constraintBottom_toBottomOf="@id/user_icon"
        app:layout_constraintStart_toEndOf="@id/user_icon"
        app:layout_constraintTop_toTopOf="@id/user_icon" />

    <Button
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit"
        app:layout_constraintStart_toStartOf="@id/user_icon"
        app:layout_constraintTop_toBottomOf="@id/user_icon" />

    <TextView
        android:id="@+id/tracks_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin_large"
        android:text="@string/tracks"
        android:textAppearance="@style/TextAppearance.Musify.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_icon" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tracks_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/item_margin_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tracks_title"
        tools:itemCount="5"
        tools:listitem="@layout/item_user_track" />

</androidx.constraintlayout.widget.ConstraintLayout>